# FapespOpportunities

./: .gitignore  README.extras.md  README.md  requirements.txt
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  README.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/__MODULE_NAME__/: about.py  desktop.py
src/fapesp_opportunities/: about.py  desktop.py  program.py
src/fapesp_opportunities/modules/: configure.py  fapesp.py
